--- a/src/Story.css
+++ b/src/Story.css
@@ -1,1 +1,9 @@
-/* 1:35:40 */
+.story {
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 120px;
+    height: 200px;
+    box-shadow: 0px 5px 17px -7px rgba(0, 0, 0, 0.75);
+}
